[gd_scene load_steps=14 format=3 uid="uid://dmdjqfw8ge8mn"]

[ext_resource type="PackedScene" uid="uid://dcclxbjbmuore" path="res://Scenes/Level/Entity/entity.tscn" id="1_l41uv"]
[ext_resource type="Script" path="res://Scenes/Level/Entity/Player/player.gd" id="2_84j87"]
[ext_resource type="Texture2D" uid="uid://b4vuo74elbcik" path="res://Textures/Level/Player/player_final.png" id="3_ajhbl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wp0l2"]
size = Vector2(25.5, 10)

[sub_resource type="Animation" id="Animation_qn6rd"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 9]
}

[sub_resource type="Animation" id="Animation_56cjf"]
resource_name = "walk"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1olo2"]
_data = {
"idle": SubResource("Animation_qn6rd"),
"walk": SubResource("Animation_56cjf")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4uxqp"]
bg_color = Color(0.337255, 0.0980392, 0.0117647, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7wby"]
size = Vector2(26, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_353fh"]
size = Vector2(0, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_62krr"]
radius = 259.008

[sub_resource type="CircleShape2D" id="CircleShape2D_pk33e"]
radius = 108.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o3x6f"]
radius = 16.0

[node name="Player" groups=["player"] instance=ExtResource("1_l41uv")]
collision_layer = 2
script = ExtResource("2_84j87")
spell_additionnal = 0
spell_size = 1.0
spell_cooldown = 1.0
coins = 0
enemy_group = "enemy"
max_hp = 100

[node name="Sprite2D" parent="." index="0"]
position = Vector2(-1, -25)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_ajhbl")
hframes = 6
vframes = 2
frame = 6

[node name="CollisionShape2D" parent="." index="1"]
visible = false
shape = SubResource("RectangleShape2D_wp0l2")

[node name="Camera2D" type="Camera2D" parent="." index="2"]

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_1olo2")
}

[node name="HealthBar" parent="." index="4"]
offset_left = -10.0
offset_top = -60.0
offset_right = 30.0
offset_bottom = -56.0
theme_override_styles/fill = SubResource("StyleBoxFlat_4uxqp")

[node name="LabelsLayer" type="Control" parent="." index="5"]
layout_mode = 3
anchors_preset = 0
offset_left = -16.0
offset_top = -69.0
offset_right = 16.0

[node name="HurtBox" parent="." index="6"]
visible = false

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("RectangleShape2D_b7wby")

[node name="HitBox" parent="." index="7"]
visible = false
collision_layer = 0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("RectangleShape2D_353fh")

[node name="DetectionBox" type="Area2D" parent="." index="8"]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox" index="0"]
shape = SubResource("CircleShape2D_62krr")

[node name="GrabBox" type="Area2D" parent="." index="9"]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabBox" index="0"]
shape = SubResource("CircleShape2D_pk33e")

[node name="CollectBox" type="Area2D" parent="." index="10"]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectBox" index="0"]
shape = SubResource("CircleShape2D_o3x6f")

[connection signal="area_entered" from="GrabBox" to="." method="_on_grabed"]
[connection signal="area_entered" from="CollectBox" to="." method="_on_collected"]
